# LatteAlbum

./: .dockerignore  .env  .env.example  .env.lite  .env.lite.example  .env.remote.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  clean-run.sh  deploy-lite.sh  deploy-on-server.sh  deploy-remote.sh  deploy.sh  dev-run.sh  docker-compose.yml  latte-album.service  package.sh  pom.xml  run.sh  setup.sh  start.sh  uninstall.sh
docs/: additional.md  architecture.md  defensive-review.md  frontend-testing.md  known-issues.md  video-rotation-fix-plan.md
frontend/: .env.development  index.html  (+5 more)
rust/: .env.default  .env.test  :memory:  Cargo.toml  build.rs  cargo-with-vendor.sh  dependency.sh  dev-start.sh  homebrew_build_env.sh  kill_old_server.sh  start-rust-backend.sh  start.sh
rust/examples/: bench_thumbnail_heic.rs  bench_thumbnail_image_heif_jpg.rs  bench_thumbnail_methods.rs  bench_transcode_formats.rs  bench_transcode_heic_jpg.rs  benchmark_thumbnail.rs  benchmark_transcode.rs  exif_extract_kamadak.rs  exif_from_heif_libheif.rs  exif_via_imagedecoder.rs  exif_via_little_exif.rs  heic_decode_image.rs  heic_metadata_image.rs  heic_metadata_libheif.rs  heic_to_jpeg_basic.rs  perf_profile_memory.rs  profile_memory.rs  video_thumbnail_with_rotation.rs
rust/src/: app.rs  config.rs  lib.rs  main.rs
rust/src/api/: directories.rs  files.rs  mod.rs  system.rs
rust/src/db/: mod.rs  models.rs  pool.rs  repository.rs  schema.sql
rust/src/db/migrations/: 20240101000000_initial_schema.sql  20240101000001_media_files.sql  20240101000002_media_files_gps.sql
rust/src/extraction/: mod.rs  time.rs
rust/src/fixtures/: mod.rs
rust/src/helpers/: mod.rs
rust/src/processors/: file_metadata.rs  heif_processor.rs  image_processor.rs  mod.rs  processor_trait.rs  video_processor.rs
rust/src/services/: cache_service.rs  file_service.rs  mod.rs  scan_service.rs  scheduler.rs  transcoding_pool.rs
rust/src/utils/: mod.rs  thumbnail.rs
rust/src/websocket/: broadcast.rs  handler.rs  mod.rs  progress.rs  scan_state.rs
rust/tests/: mod.rs
rust/tests/api/: directories_api_test.rs  files_api_test.rs  mod.rs  system_api_test.rs  websocket_test.rs
rust/tests/db/: mod.rs  repository_test.rs
rust/tests/fixtures/: mod.rs
rust/tests/helpers/: mod.rs
rust/tests/processors/: mod.rs  processor_test.rs
rust/tests/services/: file_service_test.rs  mod.rs  scan_service_test.rs
(+82 files in other folders)
