[package]
name = "latte-album"
version = "0.1.0"
edition = "2021"
description = "A personal photo album application for NAS deployment"
authors = ["Latte Album"]

[features]
default = []
video-processing = ["ffmpeg-next"]
# Build from project's vendor directory instead of using system libraries
vendor-build = ["dep:cmake"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "filter"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "tiff", "rayon"] }

# Parallel processing
rayon = "1.11"
rayon-core = "1.12"

# Video processing (FFmpeg) - optional
ffmpeg-next = { version = "7", optional = true }

# WebSocket
tokio-tungstenite = "0.28"

# Caching
moka = { version = "0.12", features = ["future"] }

# Configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
async-trait = "0.1"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
itertools = "0.13"
mime_guess = "2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Scheduling
tokio-cron-scheduler = "0.12"

# EXIF Support
# 由于小米14的照片存在超大的EXIF块，需要带入此库的最新提交以修复问题
#kamadak-exif = "0.6.1"
#exif = { path = "vendor/exif-rs" }
exif = { git = "https://github.com/kamadak/exif-rs", rev = "7cb491c" }

libheif-rs = { version = "2.6.1", default-features = false, features = ["v1_17"] }

# Example-only dependencies (used by bench_transcode_formats.rs)
[dev-dependencies]
libheif-rs = { version = "2.6.1", features = ["image"] }
little_exif = { version = "0.6.23" }
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
webp = "0.3"
tempfile = "3"
assert_fs = "1"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
cmake = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
